--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
             <button id="submit-btn" class="bg-red-400 text-white px-4 py-2 rounded font-semibold">Submit</button>
        </section>
    </main>
+
+   <p id="c-balance"> Current Balance : 300 </p>
+ <input id="input" type="text">
+ <button onclick="add()" id="add-btn"> Add Money </button>
+ <script>
+ function add(num){
+    const cbalance= document.getElementById("c-balance").innerText;
+    const inputValue= document.getElementById("input").value;
+    console.log(cbalance+inputValue)
+    }
+    console.log(add(200));
+
+    </script>
+
+
+
    
 
    <script src="js/bank.js"></script>
